--- a/view/about/index.html
+++ b/view/about/index.html
@@ -48,9 +48,9 @@
     <section id="main_content" class="inner">
         <h3 class="bubble">Contact me:</h3>
         <div id="allmap" style="height: 380px;margin-bottom: 30px;"></div>
-        <div style="background: url(/images/telephone.png) no-repeat;"><p class="bubble">Telephone:18779118390</p></div>
+        <div style="background: url(/images/telephone.png) no-repeat;"><p class="bubble">Telephone:18270644032</p></div>
         <div style="background: url(/images/email.svg) no-repeat;"><p class="bubble">Email:yj19950516@163.com</p></div>
-        <div style="background: url(/images/address.svg) no-repeat;"><p class="bubble">Address:上海市-浦东新区</p></div>
+        <div style="background: url(/images/address.svg) no-repeat;"><p class="bubble">Address:江西省-南昌市</p></div>
     </section>
 </div>
 
@@ -65,12 +65,12 @@
 <script type="text/javascript">
     // 百度地图API功能
     var map = new BMap.Map("allmap");    // 创建Map实例
-    var point = new BMap.Point(121.610682,31.189179);
+    var point = new BMap.Point(115.864822,28.703895);
     map.centerAndZoom(point, 15);  // 初始化地图,设置中心点坐标和地图级别
     var marker = new BMap.Marker(point);  // 创建标注
     map.addOverlay(marker);              // 将标注添加到地图中
     map.addControl(new BMap.MapTypeControl());   //添加地图类型控件
-    map.setCurrentCity("上海");          // 设置地图显示的城市 此项是必须设置的
+    map.setCurrentCity("南昌");          // 设置地图显示的城市 此项是必须设置的
     map.enableScrollWheelZoom(true);     //开启鼠标滚轮缩放
 </script>
 
