--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/*--
+--
 Author: W3layouts
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
@@ -31,6 +31,17 @@ ul,label{
 body a:hover{
 	text-decoration:none;
 }
+.header-left img
+
+/*--container--*/
+#container{
+}
+.container{
+    margin-top: 100px;
+}
+/*--//container--*/
+
+
 /*--baner--*/
 .banner {
 	background:url(../images/a.jpg)no-repeat center 0px;
@@ -43,8 +54,11 @@ body a:hover{
 	background: url(../images/dott.png)repeat 0px 0px;
 	padding: 4em 0;
 }
+.col-md-4.header-left {
+    text-align: center;
+}
 .header-left img {
-    width: 100%;
+    width: 60%;
     border: 5px solid rgba(255, 255, 255, 0.68);
 }
 .header-right {
@@ -138,7 +152,7 @@ ul.nav.navbar li a:hover,ul.nav.navbar li a.active,ul.nav.navbar li a:focus{
 	padding:6em 0;
 }
 h3.title {
-    font-size: 4em;
+    font-size: 2.5em;
     text-align: center;
     color: #008B8B;
     border-bottom: 4px double rgba(247, 197, 106, 0.35);
@@ -1104,4 +1118,4 @@ h3.title {
 }
 
 }
-/*--//responsive-design---*/
+/*--//responsive-design---
