--- a/view/resume/index.html
+++ b/view/resume/index.html
@@ -42,7 +42,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </head>
 <body>
 <!-- container -->
-<div id="container" class="container">
+<div id="container" class="main_container">
     <!--banner-->
     <div id="home" class="banner">
         <div class="banner-info">
@@ -51,7 +51,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <img src="/images/img1.png" alt=""/>
                 </div>
                 <div class="col-md-8 header-right">
-                    <h2>Hello</h2>
                     <h2>I'm Juan Yu</h2>
                     <h6>Web Designer and Developer</h6>
                     <ul class="address">
@@ -151,8 +150,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <h4>2016/09 - 至今 </h4>
                 </div>
                 <div class="col-md-6 work-left work-left2">
-                    <h5>传音控股|web前端工程师实习生<span class="glyphicon glyphicon-briefcase"></span></h5>
-                    <p>1.负责网页设计,设计出性能和外观匹配的网页。</p><p>2.与后台动态交互，实现页面功能。</p>
+                    <h5>传音控股|web前端工程师助理<span class="glyphicon glyphicon-briefcase"></span></h5>
+                        <span class=""><p>1.负责网页设计,设计出性能和外观匹配的网页。</p></span>
+                        <span class=""><p>2.与后台动态交互，实现页面功能。</p></span>
+                    
                 </div>
                 <div class="clearfix"> </div>
             </div>
@@ -162,8 +163,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
                 <div class="col-md-6 work-right">
                     <h5><span class="glyphicon glyphicon-briefcase"> </span>杭州禾旭科技有限公司|销售代表</h5>
-                    <h5><span class="glyphicon glyphicon-briefcase"> <p>1.在与不同客户沟通交流中，沟通交流的技能得到提升。</p></h5>
-               <h5><span class="glyphicon glyphicon-briefcase"> <p>2.与同事之间的合作中，体会到了真正的团队精神。</p></h5>
+                        <span class=""><p>1.在与不同客户沟通交流中，沟通交流的技能得到提升。</p></span>
+                        <span class=""><p>2.与同事之间的合作中，体会到了真正的团队精神。</p></span>  
                 </div>
                 <div class="clearfix"> </div>
             </div>
@@ -416,7 +417,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <!-- photoShop -->
                         <div class="tab-1 resp-tab-content">
                             <div class="tab_img">
-                                    <div class="col-md-4 portfolio-grids">
+                                <div class="col-md-4 portfolio-grids">
                                         <div class="grid">
                                             <a href="/images/g1.jpg" class="swipebox" title="Democracy">
                                                 <img src="/images/g1.jpg" alt="" class="img-responsive" />
@@ -426,8 +427,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                                 </div>
                                             </a>
                                         </div>
-                                    </div>
-                                    <div class="col-md-4 portfolio-grids">
+                                </div>
+                                <div class="col-md-4 portfolio-grids">
                                         <div class="grid">
                                             <a href="/images/g3.jpg" class="swipebox" title="Cool Berg">
                                                 <img src="/images/g3.jpg" alt="" class="img-responsive" />
@@ -437,8 +438,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                                 </div>
                                             </a>
                                         </div>
-                                    </div>
-                                    <div class="col-md-4 portfolio-grids">
+                                </div>
+                                <div class="col-md-4 portfolio-grids">
                                         <div class="grid">
                                             <a href="/images/g9.jpg" class="swipebox" title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis maximus tortor diam, ac lobortis justo rutrum quis. Praesent non purus fermentum, eleifend velit non">
                                                 <img src="/images/g9.jpg" alt="" class="img-responsive" />
@@ -448,15 +449,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                                 </div>
                                             </a>
                                         </div>
-                                    </div>
-                                    <div class="clearfix"> </div>
+                                </div>
+                                <div class="clearfix"> </div>
                             </div>
                         </div>
                         <!-- //photoShop -->
                         <!-- wordPress -->
                         <div class="tab-1 resp-tab-content">
                             <div class="tab_img">
-                                    <div class="col-md-4 portfolio-grids">
+                                <div class="col-md-4 portfolio-grids">
                                         <div class="grid effect-sarah">
                                             <a href="/images/g2.jpg" class="swipebox" title="Block Design & FUN">
                                                 <img src="/images/g2.jpg" alt="" class="img-responsive" />
@@ -466,8 +467,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                                 </div>
                                             </a>
                                         </div>
-                                    </div>
-                                    <div class="col-md-4 portfolio-grids">
+                                </div>
+                                <div class="col-md-4 portfolio-grids">
                                         <div class="grid">
                                             <a href="/images/g4.jpg" class="swipebox" title="Food and Drink UI Kit">
                                                 <img src="/images/g4.jpg" alt="" class="img-responsive" />
@@ -477,8 +478,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                                 </div>
                                             </a>
                                         </div>
-                                    </div>
-                                    <div class="col-md-4 portfolio-grids">
+                                </div>
+                                <div class="col-md-4 portfolio-grids">
                                         <div class="grid">
                                             <a href="/images/g8.jpg" class="swipebox" title="MODELLO">
                                                 <img src="/images/g8.jpg" alt="" class="img-responsive" />
@@ -488,8 +489,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                                 </div>
                                             </a>
                                         </div>
-                                    </div>
-                                    <div class="clearfix"> </div>
+                                </div>
+                                <div class="clearfix"> </div>
                             </div>
                         </div>
                         <!-- //wordPress -->
