--- a/stylesheets/css/stylesheet.css
+++ b/stylesheets/css/stylesheet.css
@@ -277,9 +277,9 @@ Full-Width Styles
   top:0;
   right: 10px;
   z-index: 10;
-  padding: 10px 50px 10px 10px;
+  padding: 10px 10px 10px 50px;
   color: #fff;
-  background: url('/images/resume.png') rgba(0,0,0,.1) no-repeat 95% 50%;
+  background: url('/images/resume.svg') rgba(0,0,0,.1) no-repeat 5% 50%;
   font-weight: 700;
   box-shadow: 0 0 10px rgba(0,0,0,.5);
   border-bottom-left-radius: 2px;
